--- a/MonitorApp/res/layout/activity_recording.xml
+++ b/MonitorApp/res/layout/activity_recording.xml
@@ -54,7 +54,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/duration"
+                android:id="@+id/duration2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
