添加内存监控线图

--- a/MonitorApp/res/layout/tablerow.xml
+++ b/MonitorApp/res/layout/tablerow.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:background="@android:color/transparent"
         android:text="操作" />
 
 </TableRow>
