--- a/MonitorApp/res/layout/activity_main.xml
+++ b/MonitorApp/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
         android:layout_below="@+id/linearLayout1"
         android:layout_centerInParent="true"
         android:layout_marginTop="60dp"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:text="开始录制"
         android:textSize="12sp" />
@@ -94,7 +95,8 @@
         android:layout_height="40sp"
         android:layout_centerInParent="true"
         android:ems="10"
-         android:layout_below="@+id/startRecording"
+        android:layout_below="@+id/startRecording"
+        android:background="@android:color/transparent"
         android:text="查看录制"
         android:textSize="12sp" />
 
