--- a/MonitorApp/res/layout/tablerow.xml
+++ b/MonitorApp/res/layout/tablerow.xml
@@ -40,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textColor="@android:color/holo_purple"
         android:gravity="center"
         android:background="@android:color/transparent"
         android:text="操作" />
